--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll-parallax": "^2.3.2",
+    "react-spring": "^8.0.27",
+    "react-sticky": "^6.0.3",
+    "react-typist": "^2.0.5",
+    "waypoints": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
